--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
 	margin: 0;
 	display: flex;
 	flex-direction: column;
+	min-height: 100vh;
 }
 
 ul {
@@ -106,5 +107,5 @@ li {
   color: #F9FAF8;
   justify-content: center;
   align-items: center;
-/*  margin-top: auto;*/
+  margin-top: auto;
 }
