--- a/style.css
+++ b/style.css
@@ -91,7 +91,14 @@ li {
 	font-style: italic;
 	justify-content: center;
 	padding: 100px;
+	flex-direction: column;
 	
+}
+
+.quote > span {
+	font-size: 24px;
+	align-self: flex-end;
+	padding: 10px 50px 10px 0;
 }
 
 .action {
